<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="patientProfile.fragments.EditPatientProfileFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/editProfileErrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/updateFirstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_first_name_label" />

        <EditText
            android:id="@+id/newFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint" />

        <TextView
            android:id="@+id/updateLastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/update_last_name_label" />

        <EditText
            android:id="@+id/newLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint" />

        <TextView
            android:id="@+id/updatePasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/update_password_label" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password_hint"
            android:inputType="textPassword" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:onClick="editProfile"
            android:text="@string/edit_profile_button" />
    </LinearLayout>

</ScrollView>