<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="patientProfile.fragments.CreatePostFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/postErrors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_title_hint" />

        <EditText
            android:id="@+id/postText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_text_hint"
            android:inputType="textMultiLine"
            android:lines="5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:onClick="createPost"
            android:text="@string/create_post_button" />
    </LinearLayout>

</ScrollView>