<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/responseImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_description"
        android:src="@drawable/default_user" />

    <TextView
        android:id="@+id/responseTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/responseImg"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/responseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responseTimestamp"
        android:layout_toRightOf="@id/responseImg"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/responseVotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="32sp" />

    <Button
        android:id="@+id/upVoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responseVotes"
        android:layout_toRightOf="@id/responseText"
        android:text="@string/up_vote_button" />

     <Button
        android:id="@+id/downVoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responseVotes"
        android:layout_toRightOf="@id/upVoteButton"
        android:text="@string/down_vote_button" />
     
    <TextView
        android:id="@+id/rid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</RelativeLayout>